# datadolphins_application

./: .gitignore  README.md  uitleg_drawio.drawio
backend/: .coveragerc  .env  .pylintrc  docker-compose.yml  pyproject.toml  pytest.ini  start.sh
backend/app/: app_factory.py  main.py  requirements.txt
backend/app/api/: api.py  dependencies.py  exceptions.py
backend/app/api/endpoints/: gebruiker.py
backend/app/core/: config.py  defaults.py
backend/app/crud/: __init__.py  gebruiker.py
backend/app/database/: base.py  base_class.py  create_database.py  database.py
backend/app/database/setup/: 0.set_up_schema.sql  1.set_up_data.sql
backend/app/models/: __init__.py  bedrijf.py  functie.py  gebruiker.py
backend/app/schemas/: __init__.py  bedrijf.py  functie.py  gebruiker.py
backend/app/utils/: evtp_upc.py
backend/common/: database_url.py
backend/tests/samples/: test_db.py
frontend/: package-lock.json  package.json
frontend/plugins/: vuetify.ts
frontend/src/: App.vue
frontend/src/components/: HelloWorld.vue  TheWelcome.vue
frontend/src/router/: index.ts
frontend/src/views/: AboutView.vue  HomeView.vue
frontend/utils/: fetchApi.ts  index.ts
scripts/: format_and_lint.sh
