[tool.poetry]
name = "Local development datadolphins applicatie"
version = "0.1.0"
description = ""
authors = ["Amir Kalloe <amir.kalloe@datadolphins.nl>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.85.1"}
SQLAlchemy = "^2.0.7"
python-dotenv = "^0.21.0"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
pandas = "^1.5.1"
SQLAlchemy-Utils = "^0.40.0"
secure = "^0.3.0"
PyJWT = "^2.6.0"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^22.10.0"}
flake8 = "^5.0.4"
ipykernel = "^6.16.2"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
